# nbedit-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-layered-architecture.md  0002-no-kernel-execution.md  0003-output-safety.md  0004-patch-uniqueness.md  0005-custom-exceptions.md  0006-atomic-write-and-backup.md  0007-mcp-fastmcp-and-paths.md  0008-summary-convention.md  0009-output-rendering.md  0010-batch-read.md  0011-explicit-summary-metadata.md  0012-large-read-limits.md  0013-batch-insert.md  0014-cell-id-addressing.md  0015-create-notebook.md  0016-version-single-source.md  0017-write-revision-guard.md  README.md
examples/: sandbox.ipynb
notebook_edit/: __init__.py  cli.py  core.py  mcp_server.py
tests/: test_core.py  test_mcp_stdio.py
