[project]
name = "notebook-edit"
dynamic = ["version"]
description = "Structural editing of Jupyter notebooks via CLI and MCP (stdio). No kernel execution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nbformat>=5.9",
    "mcp>=1.2",
]

[project.scripts]
nb-edit = "notebook_edit.cli:main"
nb-edit-mcp = "notebook_edit.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "notebook_edit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["notebook_edit"]
